# UTF-Utils

./: .gitignore  CMakeLists.txt  README.md  UtfHelper.h  utf-utils.h
include/UTF-Utils/: utf-utils.h
src/: CMakeLists.txt  compiled.cpp
